# small-media

./: .gitignore  README.md  dev_notes.md  general-header.tsx  tsconfig.json
art-hound/: package-lock.json  package.json
art-hound/src/: App.tsx  README.md  docker-compose.yml  index.html  nginx.conf  package.json  pyproject.toml
art-hound/src/backend/: Dockerfile  README.md  __init__.py  backend_db.py  feed.py  image_query.py  login.py  main.py  posts.py  projects.py  pyproject.toml  requirements.txt
art-hound/src/backend/public/: feed.css  index.html
art-hound/src/backend/sample-assets/bayard-post-one/: post-data.json
art-hound/src/backend/sample-assets/bayard-post-three/: post-data.json
art-hound/src/backend/sample-assets/bayard-post-two/: post-data.json
art-hound/src/backend/test/: conftest.py  test_backend_db.py  test_feed.py  test_image_query.py  test_login.py  test_posts.py  test_projects.py  test_routes.py
art-hound/src/client/: Dockerfile  package-lock.json  package.json
art-hound/src/client/public/: feed.css  index.html  signup-form.css
art-hound/src/client/src/: App.css  App.tsx  index.css
art-hound/src/client/src/components/: About.tsx  Feed.tsx  Following.tsx  Friends.tsx  Header.tsx  Home.tsx  LocalArt.tsx  LoginForm.tsx  PopularArt.tsx  PostForms.tsx  PostsAndProjects.tsx  Projects.tsx  Search.tsx  Sidebars.tsx  SignupForm.tsx  UserProfile.tsx  login-context.tsx
art-hound/src/client/src/header/: header.tsx
art-hound/src/pages/aboutUs/: header.tsx
art-hound/src/pages/feed/: index.html
art-hound/src/pages/profile/: index.html
(+28 files in other folders)
