[tool.poetry]
name = "art-hound"
version = "0.0.1"
description = "This runs the backend server for the website art-hound."
authors = ["Bayard Carlson"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
flask = "^3.0.3"
black = "^24.10.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
