[tool.poetry]
name = "art-hound"
version = "0.0.1"
description = "This runs the backend server for the website art-hound."
authors = ["Bayard Carlson"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
flask = "^3.0.3"
black = "^24.10.0"
flask-wtf = "^1.2.2"
pymongo = "^4.10.1"
pytest = "^8.3.3"
jupyter = "^1.1.1"
werkzeug = "^3.1.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
